# nrf-sniffer-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push.yml
SnifferAPI/: BlePacket.py  CaptureFiles.py  Devices.py  Exceptions.py  Filelock.py  Logger.py  Notifications.py  Packet.py  Pcap.py  Sniffer.py  SnifferCollector.py  Types.py  UART.py  cli.py  version.py
SnifferAPI/client/: filter.py  sniffer.py  tools.py
tests/: test_capturefiles.py  test_cli.py  test_devices.py  test_notifier.py  test_uart.py
tools/: channel_heatmap.py  monitor_battery.py  monitor_gaps.py  monitor_stability.py  parse_sensor_data.py  tail_rssi.py  tail_with_rotation.py  watch_target.py  watchdog_device_offline.py
tools/web_dashboard/: app.py
tools/web_dashboard/templates/: index.html
